Adjust width of edit and add password containers and add a max-width to prevent it from overflowing on mobile

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -49,5 +49,5 @@ h1, h2 {
 }
 
 h2, h2, h3, h4, h5, h6, p, span {
-  color: rgb(55, 55, 55);
+  color: $dark;
 }
