--- a/styles/_password_list.scss
+++ b/styles/_password_list.scss
@@ -24,7 +24,7 @@
     border-radius: 10px;
     width: 100%;
     height: 100%;
-    box-shadow: 0 0px 25px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: $shadow;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
