--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,7 +2,7 @@
 
 $dark: rgb(49, 51, 52);
 $grey: rgb(211, 211, 211);
-$cream: rgb(249, 249, 242);
+$cream: rgb(254, 254, 251);
 $main: #bbd1d5;
 $gradient: linear-gradient(#8F7CFF, #41CB99);
 $shadow: 0 0px 25px 0 rgba(0, 0, 0, 0.2);
